# FileExplorer

./: CMakeLists.txt  directory.cpp  directory.h  file.cpp  file.h  historynode.cpp  historynode.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  minint.ui  minint.ui.autosave  navigationhistory.cpp  navigationhistory.h  node.cpp  node.h  notepad.cpp  notepad.h  notepad.ui  originfile.cpp  originfile.h
